--- a/iknow-app/src/theme/variables.scss
+++ b/iknow-app/src/theme/variables.scss
@@ -5,6 +5,9 @@ $primary-color: #31263e;
 $secondary-color: #44355b;
 $tertiary-color: #ee5622;
 
+$error-color: #cc0000;
+$success-color: #00b800;
+
 $text-color: #ffffff;
 
 /** Ionic CSS Variables **/
