--- a/iknow-app/src/components/button/style.scss
+++ b/iknow-app/src/components/button/style.scss
@@ -1,6 +1,9 @@
 @import "../../theme/variables";
 
 .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: $primary-color;
     width: 100%;
     height: 40px;
