iknow-app: project configuration changes

--- a/iknow-app/src/theme/variables.scss
+++ b/iknow-app/src/theme/variables.scss
@@ -4,6 +4,8 @@ http://ionicframework.com/docs/theming/ */
 $primary-color: #31263e;
 $secondary-color: #44355b;
 $tertiary-color: #ee5622;
+$quaternary-color: #eca72c;
+$quintenary-color: #221e22;
 
 $error-color: #cc0000;
 $success-color: #00b800;
