--- a/iknow-app/src/pages/my-profile/main/style.scss
+++ b/iknow-app/src/pages/my-profile/main/style.scss
@@ -24,19 +24,43 @@
 
     &-ratings-container {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         padding: 16px 0;
-        &-master-rating-container {
+
+        &-stars-container {
             display: flex;
             justify-content: center;
-            padding: 0 0 16px 0;
+            align-items: center;
+            padding: 0 8px 0 0;
         }
-        &-apprendice-rating-container {
+        &-evaluation-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0 8px 0 0;
+        }
+        &-quantity-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0 8px 0 0;
+        }
+
+        &-info-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &-icon-container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         }
     }
 
-    &-actions-buttons-container {
+    &-header-actions-buttons-container {
         display: flex;
         width: 100%;
         padding: 0 0 16px 0;
@@ -48,6 +72,16 @@
 
         :last-child {
             padding: 0;
+        }
+    }
+
+    &-footer-actions-buttons-container {
+        display: flex;
+        width: 100%;
+        padding: 0 0 16px 0;
+        &-button-container {
+            display: flex;
+            width: 100%;
         }
     }
 
