--- a/iknow-app/src/pages/my-profile/main/style.scss
+++ b/iknow-app/src/pages/my-profile/main/style.scss
@@ -68,10 +68,10 @@
             display: flex;
             width: 100%;
             padding: 0 8px 0 0;
-        }
 
-        :last-child {
-            padding: 0;
+            &:last-child {
+                padding: 0;
+            }
         }
     }
 
