--- a/iknow-app/src/pages/missions/create/style.scss
+++ b/iknow-app/src/pages/missions/create/style.scss
@@ -1,6 +1,6 @@
 @import "../../../theme/variables";
 
-.missions-filters-page {
+.missions-create-page {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,7 @@
         &-row {
             display: flex;
             padding: 0 0 8px 0;
-            
+
             &-input-container {
                 display: flex;
                 width: 100%;
