iknow-app: infinite scroll

--- a/iknow-app/src/pages/missions/main/style.scss
+++ b/iknow-app/src/pages/missions/main/style.scss
@@ -10,7 +10,7 @@
     &-missions-list {
         display: flex;
         flex-direction: column;
-        overflow-y: auto;
+        overflow: hidden;
         width: 100%;
         height: 100%;
         &-collapse-container {
