--- a/iknow-app/src/components/base-layout/style.scss
+++ b/iknow-app/src/components/base-layout/style.scss
@@ -24,7 +24,7 @@
 
         &-content {
             display: flex;
-            overflow-y: auto;
+            overflow: hidden;
             height: 100%;
             width: 100%;
         }
