--- a/iknow-app/src/pages/my-profile/main/style.scss
+++ b/iknow-app/src/pages/my-profile/main/style.scss
@@ -6,6 +6,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    overflow: auto;
 
     &-name-container {
         display: flex;
