--- a/iknow-app/src/pages/my-profile/my-missions/style.scss
+++ b/iknow-app/src/pages/my-profile/my-missions/style.scss
@@ -22,8 +22,20 @@
             }
             &-content-container {
                 display: flex;
+                flex-direction: column;
                 width: 100%;
                 height: 100%;
+                font-size: 14px;
+                &-header {
+                    padding: 0 0 16px 0;
+                    span {
+                        font-weight: 700;
+                        padding: 0 8px 0 0;
+                    }
+                }
+                &-content {
+                    
+                }
             }
         }
     }
