--- a/iknow-app/src/components/base-layout/style.scss
+++ b/iknow-app/src/components/base-layout/style.scss
@@ -39,6 +39,9 @@
             display: flex;
             padding: 8px;
             border-radius: 6px;
+            &:disabled{
+                opacity: 0.3;
+            }
         }
         &-tab-active {
             @extend .base-layout-tabs-tab;
