--- a/iknow-app/src/pages/profile/main/style.scss
+++ b/iknow-app/src/pages/profile/main/style.scss
@@ -1,6 +1,6 @@
 @import "../../../theme/variables";
 
-.my-profile-page {
+.profile-page {
     display: flex;
     flex-direction: column;
     align-items: center;
