--- a/iknow-app/src/theme/variables.scss
+++ b/iknow-app/src/theme/variables.scss
@@ -10,6 +10,7 @@ $quintenary-color: #221e22;
 $error-color: #cc0000;
 $success-color: #00b800;
 
+$icons-color: #ffffff;
 $text-color: #ffffff;
 
 /** Ionic CSS Variables **/
