--- a/iknow-app/src/components/missions-list/style.scss
+++ b/iknow-app/src/components/missions-list/style.scss
@@ -10,9 +10,6 @@
         display: flex;
         padding: 0 0 8px 0;
 
-        :last-child {
-            padding: 0;
-        }
         &-content-container {
             display: flex;
             flex-direction: column;
@@ -20,10 +17,20 @@
             height: 100%;
             font-size: 14px;
             &-header {
-                padding: 0 0 16px 0;
+                display: flex;
+                flex-direction: column;
                 span {
                     font-weight: 700;
                     padding: 0 8px 0 0;
+                }
+                &-created-by-container {
+                    display: flex;
+                    padding: 0 0 4px 0;
+                }
+                &-status-container {
+                    display: flex;
+                    padding: 0 0 16px 0; 
+                    font-size: 12px;
                 }
             }
             &-content {
