--- a/iknow-app/src/components/collapse/style.scss
+++ b/iknow-app/src/components/collapse/style.scss
@@ -54,6 +54,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
+            opacity: 0;
         }
         .collapse-content-empty-message {
             text-align: center;
