--- a/iknow-app/src/theme/variables.scss
+++ b/iknow-app/src/theme/variables.scss
@@ -7,7 +7,7 @@ $tertiary-color: #ee5622;
 $quaternary-color: #eca72c;
 $quintenary-color: #221e22;
 
-$error-color: #cc0000;
+$error-color: #B00020;
 $success-color: #00b800;
 
 $icons-color: #ffffff;
