iknow-app: network

--- a/iknow-app/src/app.scss
+++ b/iknow-app/src/app.scss
@@ -110,6 +110,7 @@ button {
 .tooltip{
     max-width: 70vw;
     .title {
+        font-size: 20px;
         color: $tertiary-color;
     }
     .text {
