--- a/iknow-app/src/components/input/style.scss
+++ b/iknow-app/src/components/input/style.scss
@@ -8,6 +8,7 @@
     padding: 4px;
     height: 45px;
     width: 100%;
+    box-shadow: 0px 4px 2px $shadow-color;
 
     .input-header-container {
         display: flex;
