--- a/iknow-app/src/theme/variables.scss
+++ b/iknow-app/src/theme/variables.scss
@@ -10,6 +10,8 @@ $quintenary-color: #221e22;
 $error-color: #B00020;
 $success-color: #00b800;
 
+$shadow-color: #221e2250;
+
 $icons-color: #ffffff;
 $text-color: #ffffff;
 
