--- a/iknow-app/src/components/base-layout/style.scss
+++ b/iknow-app/src/components/base-layout/style.scss
@@ -16,6 +16,7 @@
         border-bottom-right-radius: 48px;
         padding: 16px;
         overflow: hidden;
+        box-shadow: 0px 4px 2px $shadow-color;
 
         &-header-container {
             display: flex;
