--- a/iknow-app/src/components/collapse/style.scss
+++ b/iknow-app/src/components/collapse/style.scss
@@ -6,6 +6,7 @@
     width: 100%;
     border-radius: 16px;
     background-color: $primary-color;
+    box-shadow: 0px 4px 2px $shadow-color;
     &-header {
         display: flex;
         justify-content: space-between;
