--- a/iknow-app/src/components/text-area/style.scss
+++ b/iknow-app/src/components/text-area/style.scss
@@ -9,6 +9,7 @@
     height: auto;
     max-height: 400px;
     width: 100%;
+    box-shadow: 0px 4px 2px $shadow-color;
 
     .text-area-header {
         display: flex;
@@ -42,6 +43,7 @@
     max-height: 400px;
     width: 100%;
     border: 1px solid $error-color;
+    box-shadow: 0px 4px 2px $shadow-color;
 
     .text-area-header {
         display: flex;
