--- a/iknow-app/src/components/infinte-scroll/style.scss
+++ b/iknow-app/src/components/infinte-scroll/style.scss
@@ -6,6 +6,12 @@
     width: 100%;
     height: 100%;
     overflow: auto; 
+    scrollbar-width: none; 
+
+    &::-webkit-scrollbar {
+        display: none; 
+    }
+
     &-empty-message-container {
         display: flex;
         width: 100%;
