--- a/iknow-app/src/components/dropdown/style.scss
+++ b/iknow-app/src/components/dropdown/style.scss
@@ -16,7 +16,7 @@
         p {
             font-weight: 700;
             font-size: 10px;
-            opacity: 50%;
+            opacity: 0.5;
         }
     }
     input {
@@ -58,7 +58,7 @@
         p {
             font-weight: 700;
             font-size: 10px;
-            opacity: 50%;
+            opacity: 0.5;
         }
     }
     input {
