--- a/iknow-app/src/components/input/style.scss
+++ b/iknow-app/src/components/input/style.scss
@@ -16,7 +16,7 @@
         p {
             font-weight: 700;
             font-size: 10px;
-            opacity: 50%;
+            opacity: 0.5;
         }
     }
     input {
@@ -59,13 +59,14 @@
         p {
             font-weight: 700;
             font-size: 10px;
-            opacity: 50%;
+            opacity: 0.5;
         }
     }
     input {
         height: 100%;
         background: none;
         border: none;
+        color: $text-color;
 
         &:focus {
             outline: none;
