--- a/iknow-app/src/components/messages-list/style.scss
+++ b/iknow-app/src/components/messages-list/style.scss
@@ -18,6 +18,7 @@
             padding: 8px;
             background-color: $primary-color;
             border-radius: 8px;
+            box-shadow: 0px 4px 2px $shadow-color;
 
             display: flex;
             align-items: flex-start;
