--- a/iknow-app/src/components/text-area/style.scss
+++ b/iknow-app/src/components/text-area/style.scss
@@ -17,7 +17,7 @@
         p {
             font-weight: 700;
             font-size: 10px;
-            opacity: 50%;
+            opacity: 0.5;
         }
     }
     textarea {
@@ -63,7 +63,7 @@
         p {
             font-weight: 700;
             font-size: 10px;
-            opacity: 50%;
+            opacity: 0.5;
         }
     }
     textarea {
