--- a/iknow-app/src/components/button/style.scss
+++ b/iknow-app/src/components/button/style.scss
@@ -7,13 +7,14 @@
     background-color: $primary-color;
     width: 100%;
     min-width: 80px;
-    height: 40px;
+    height: 50px;
     border-radius: 6px;
     color: $tertiary-color;
     font-weight: 700;
+    font-size: 16px;
     padding: 8px; 
+    box-shadow: 0px 4px 2px $shadow-color;
     &:disabled{
         opacity: 0.7;
     }
-    box-shadow: 0px 4px 2px $shadow-color;
 }
