--- a/iknow-app/src/pages/profile/main/style.scss
+++ b/iknow-app/src/pages/profile/main/style.scss
@@ -16,6 +16,11 @@
             display: flex;
             justify-content: center;
             padding: 0 8px 0 0;
+
+            h1 {
+                font-weight: 900;
+                color: $tertiary-color;
+            }
         }
         &-action-container {
             display: flex;
