--- a/iknow-app/src/app.scss
+++ b/iknow-app/src/app.scss
@@ -119,6 +119,11 @@ input, select, textarea{
     box-sizing: border-box;
     transition: all 0.5s;
     font-family: Roboto;
+    scrollbar-width: none; 
+
+    &::-webkit-scrollbar {
+        display: none; 
+    }
 }
 
 .tooltip{
